--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,7 +1,7 @@
 <!--
 * File Name  : index
 * Description : html code to design a registration form and a table to show the data 
-* Created date : 22/01/2019
+* Created date : 23/01/2019
 * Author  : Md Wasif Ali
 * Comments : whole page is divided into to division: 1 for the registration form, another one for the table
 -->
@@ -29,134 +29,132 @@
 <body>
     <!-- division for the registration form -->
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
+        <form id="registarForm">
+            <!--registration form header-->
+            <div class="row">                
+                <div class="registrationFormHeader form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h2>Registration</h2>
+                </div>
             </div>
-            <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
-                <form id="registarForm">
-                    <!--registration form header-->
-                    <div class="registrationFormHeader form-group">
-                        <h2>Registration</h2>
-                    </div>
-
-                    <!--registartion form body-->
-                    <div class="registrationFormBody">
-
-                        <div class="input form-group">
-                            <!--label for message-->
-                            <label class="error" id="wrongInput"> </label>
-                            <label>Name<span class="requiredField">*</span></label>
-                            <div class="box">
-                                <input id="name" class=" form-control formControl" type="text" name="name" data-validation=
-                                "length required" data-validation-length="min2">
-                            </div>
-                            <span class="error" id="wrongName"> </span>
-                        </div>
-
-                        <div class="input form-group">
-                            <label>Email<span class="requiredField">*</span></label>
-                            <div class="box">
-                                <input id="email" class="formControl form-control" type="email" name="email">
-                            </div>
-                            <label class="error" id="wrongEmail"> </label>
-                        </div>
-
-                        <div class="input form-group">
-                            <label>Password<span class="requiredField">*</span></label>
-                            <div class="box">
-                                <input id="password" class="formControl form-control" type="password" name="password">
-                            </div>
-                            <label class="error" id="wrongPassword"> </label>
-                        </div>
-
-                        <div class="input form-group">
-                            <label>Address</label>
-                            <div class="box">
-                                <textarea id="address" class="formControl addressScrool form-control" name="address"
-                                    placeholder="Parmanent Address"></textarea>
-                            </div>
-                        </div>
-
-                        <div class="input form-group" id="countryName">
-                            <label>Country Name</label>
-                            <div class="box">
-                                <select name="country" id="country" class=" form-control formControl">
-                                        <option value="" selected="selected">-- Select Country--</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div id="stateName" class="input form-group">
-                            <label>State Name</label>
-                            <div class="box">
-                                <select name="state" id="state" class="formControl form-control">
-                                    <option value="" selected="selected">-- Select State--</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div id="cityName" class="input form-group">
-                            <label>City Name</label>
-                            <div class="box">
-                                <select name="city" id="city" class="formControl form-control">
-                                    <option value="" selected="selected">-- Select City--</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="input form-group">
-                            <label>Date of Birth</label>
-                            <div class="box">
-                                <input id="dateOfBirth" class="formControl form-control" type="date" name="dateOfBirth">
-                            </div>
-                        </div>
-
-                        <div class="input form-group">
-                            <label>Gender</label>
-                            <div class=" box ">
-                                <input type="radio" name="gender" value="Male" id="Male" checked> Male
-                                <input type="radio" name="gender" value="Female" id="Female"> Female
-                                <input type="radio" name="gender" value="Other" id="Other"> Other
-                            </div>
-                        </div>
-
-                        <div class="input form-group">
-                            <label>Category</label>
-                            <div class="box ">
-                                <select id="casteCatagory" class="formControl form-control" name="casteCatagory">
-                                    <option id="Gen">Gen</option>
-                                    <option id="SC">SC</option>
-                                    <option id="ST">ST</option>
-                                    <option id="OBC">OBC</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="input form-group">
-                            <label>Subject</label>
-                            <div class="box">
-                                <input type="checkbox" name="sub[]" value="PHP" id="PHP">PHP
-                                <input type="checkbox" name="sub[]" value="JAVA" id="JAVA">JAVA
-                                <input type="checkbox" name="sub[]" value="HTML" id="HTML">HTML
-                                <input type="checkbox" name="sub[]" value="CSS" id="CSS">CSS
-                            </div>
-                        </div>
-
-                        <div class="input form-group" id="registerButton">
-                            <center>
-                                <button  name="registerButtonn" class="btn btn-default buttonDesign " id=
-                                "registerButtonn">Register</button>
-                            </center>
+            <!--registration form body-->
+            <div class="registrationFormBody">
+                <div class="row">
+                    <div class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                        <!--label for message-->
+                        <label class="error" id="wrongInput"> </label>
+                        <label>Name<span class="requiredField">*</span></label>
+                        <div class="box">
+                            <input id="name" class=" form-control formControl" type="text" name="name" data-validation="length required"
+                                data-validation-length="min2">
                         </div>
                     </div>
 
-                </form>
-            </div>
-            <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
+                    <div class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                        <label>Email<span class="requiredField">*</span></label>
+                        <div class="box">
+                            <input id="email" class="formControl form-control" type="email" name="email">
+                        </div>
+                    </div>
 
-            </div>
-        </div>
+                    <div class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                        <label>Password<span class="requiredField">*</span></label>
+                        <div class="box">
+                            <input id="password" class="formControl form-control" type="password" name="password">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-8">
+                        <label>Address</label>
+                        <div class="box">
+                            <textarea id="address" class="formControl addressScrool form-control" name="address"
+                                placeholder="Parmanent Address"></textarea>
+                        </div>
+                    </div>
+                    <div class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                        <label>Date of Birth</label>
+                        <div class="box">
+                            <input id="dateOfBirth" class="formControl form-control" type="date" name="dateOfBirth">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4" id="countryName">
+                        <label>Country Name</label>
+                        <div class="box">
+                            <select name="country" id="country" class=" form-control formControl">
+                                <option value="" selected="selected">-- Select Country--</option>
+                            </select>
+                        </div>
+                    </div>
 
+                    <div id="stateName" class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                        <label>State Name</label>
+                        <div class="box">
+                            <select name="state" id="state" class="formControl form-control">
+                                <option value="" selected="selected">-- Select State--</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div id="cityName" class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                        <label>City Name</label>
+                        <div class="box">
+                            <select name="city" id="city" class="formControl form-control">
+                                <option value="" selected="selected">-- Select City--</option>
+                            </select>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                        <label>Gender</label>
+                        <div class=" box ">
+                            <input type="radio" name="gender" value="Male" id="Male" checked> Male
+                            <input type="radio" name="gender" value="Female" id="Female"> Female
+                            <input type="radio" name="gender" value="Other" id="Other"> Other
+                        </div>
+                    </div>
+
+                    <div class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                        <label>Category</label>
+                        <div class="box ">
+                            <select id="casteCatagory" class="formControl form-control" name="casteCatagory">
+                                <option id="Gen">Gen</option>
+                                <option id="SC">SC</option>
+                                <option id="ST">ST</option>
+                                <option id="OBC">OBC</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="input form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                        <label>Subject</label>
+                        <div class="box">
+                            <input type="checkbox" name="sub[]" value="PHP" id="PHP">PHP
+                            <input type="checkbox" name="sub[]" value="JAVA" id="JAVA">JAVA
+                            <input type="checkbox" name="sub[]" value="HTML" id="HTML">HTML
+                            <input type="checkbox" name="sub[]" value="CSS" id="CSS">CSS
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
+
+                    </div>
+                    <div class="input form-group input form-group col-xs-12 col-sm-10 col-md-8 col-lg-6" id="registerButton">
+                        <center>
+                            <button name="registerButtonn" class="btn btn-default buttonDesign " id="registerButtonn">Register</button>
+                        </center>
+                    </div>
+                    <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
+
+                    </div>
+                </div>
+            </div>
+
+        </form>
         <!-- division for display the data -->
         <div class="row">
             <div id="display" class="table-responsive col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -181,7 +179,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -195,7 +193,7 @@
     <!--<script src="../JS/field-validation.js"></script>-->
     <script src="../JS/form-validation.js"></script>
     <script src="../JS/table-operation.js"></script>
-    
+
 </body>
 
 </html>
